[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/enemy.gd" id=1]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2(40, 32)

[sub_resource type="RectangleShape2D" id=2]
size = Vector2(42, 34)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource(1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource(1)

[node name="Visual" type="Polygon2D" parent="."]
polygon = PackedVector2Array(Vector2(-20, -16), Vector2(20, -16), Vector2(20, 16), Vector2(-20, 16))
color = Color(0.9, 0.2, 0.2, 1.0)

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(18, 18)
target_position = Vector2(0, 24)
enabled = true

[node name="WallCheck" type="RayCast2D" parent="."]
position = Vector2(18, 0)
target_position = Vector2(8, 0)
enabled = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource(2)

[connection signal="body_entered" from="Hitbox" to="." method="_on_body_entered"]
